# gterm

./: .gitignore  README.md  __init__.py  aptinstalls.sh  getgithash.py  grid.py  gserver.py  gterm.py  gtermhostinfo.txt  main.py  mainfontunicode.jsn  makevkb.py  pippack.sh  pyproject.toml  testaudio.py  trygraf2.py  unusedimports.py  wsplot.job
Documents/: apl-plot.utxt  apleg.utxt  build.sh  epsfiles.tgz  gterm.tex  gtuctab.utxt  trygraf-colon-apl.py  trygraf.py
ctelnet/: build.sh  ctelnet.c  makeplt.py  telnet_client.c
extras/alacritty/: nosterminal-desktop.sh  nosterminal-laptop.sh
extras/ctelnet/: build.sh  ctelnet.c  ctelnet_haiku.c
extras/iTerm2/: fse-mac-iterm2.eps  nosterminal.json
extras/xterm/: nosterminal.sh
gterm/: __main__.py  aplvkb.jsn  gterm.py  mainfonttexture.jsn
hostlibs/: gterm_driver.py
package/gterm/: LICENSE  README.md  pyproject.toml
tools/: build.sh  getmetrics.py  gterm_driver.py  gty.py  mainfontunicode.py  makevkb.py  pydumpstacks.py  testaudio.py
